--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -33,6 +33,9 @@ spring:
       client-name: library
       timeout: 10000
 
+book:
+  key-prefix: book_lock
+
 
 logging:
   config: classpath:logback-local.xml
