feat: kafka 설정 추가 예약 주문 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,10 +25,13 @@ spring:
       database: 0
       client-name: library
       timeout: 10000
+  kafka:
+    bootstrap-servers: localhost:9092
 
 
 book:
   key-prefix: book_lock
+  reserve-topic: book.reservation
 
 logging:
   config: classpath:logback-local.xml
